ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myservice.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 8080
